2011-08-30  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml: Removed, this option does not
	  work any more with current Ghostscript (Ubuntu bug 659398).

	* driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
	  driver/ljet4.xml, driver/ljet4d.xml, printer/Lexmark-E230.xml:
	  Updated entry for the Lexmark E230: Device ID, PCL-5e drivers
	  (Ubuntu bug 821818).

	* printer/Brother-HL-2070N.xml, driver/hl1250.xml,
	  driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
	  driver/ljet4.xml, driver/pxlmono.xml: Added the Brother HL-2070N
	  (Ubuntu bug 778620).

2011-08-04  Daniel Dressler <danieru.dressler@gmail.com>

	* opt/*: Used Google refine to consolidate our option longname namespace.
	  Standardized on spelling of color, capitalization, expanded acronyms,
	  Page Size, Print Quality, Economy Mode, Monochrome Mode.

	* opt/*: Further consolidation, this time of option choices. Reduced
	  number of unique options from 834 to 742.

2011-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lx5000.xml, driver/pbm2l7k.xml, printer/Lexmark-5000.xml,
	  printer/Lexmark-Z51.xml, printer/Lexmark-Z82.xml: The "lx5000"
          driver got removed from the Ghostscript source repository as it
          often causes Ghostscript to hang in an infinite loop. Therefore
	  updated the texts of "lx5000" and the alternative driver "pbm2l7k",
	  marked "lx5000" obsolete with "pbm2l7k" as replacement, and changed
	  the recommended driver of the printer for which "lx5000" was
	  recommended to "pbm2l7k".

2011-08-04  Daniel Dressler <danieru.dressler@gmail.com>

	* driver/ljet4.xml: Removed out-dated example of non-working printer in
	  from comments.

2011-07-22  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Infotec/PXL/Infotec-MP_201_PXL.ppd,
	  PPD/Lanier/PXL/Lanier-MP_201_LD_220_PXL.ppd,
	  PPD/NRG/PXL/NRG-MP_201_PXL.ppd,
	  PPD/Ricoh/PXL/Ricoh-Aficio_MP_201_PXL.ppd,