@@ -946,9 +946,6 @@
       <id>printer/Lexmark-C935hdn</id>
     </printer>
     <printer>
-      <id>printer/Lexmark-E120n</id>
-    </printer>
-    <printer>
       <id>printer/Lexmark-E350d</id>
     </printer>
     <printer>
