@@ -390,6 +390,9 @@
       <id>printer/Kyocera-KM-6230</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E120n</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-E230</id>
     </printer>
     <printer>
