@@ -22,8 +22,8 @@
       <model>Lexmark E120n</model>
     </usb>
   </autodetect>
-  <functionality>A</functionality>
-  <driver>Postscript</driver>
+  <functionality>B</functionality>
+  <driver>hpijs-pcl5e</driver>
   <drivers>
     <driver>
       <id>hpijs-pcl5e</id>
@@ -38,7 +38,7 @@
       <id>ljet4d</id>
     </driver>
     <driver>
-      <id>Postscript</id>
+      <id>lj5gray</id>
     </driver>
     <driver>
       <id>pxlmono</id>
@@ -46,9 +46,18 @@
   </drivers>
   <comments>
     <en>
-      Throughput = 20
+      Principally , this is a PostScript printer (in contrary to the
+      non-network E120), but the printer only works in PostScript mode
+      if the proprietary PPD file from the manufacturer is used, and not
+      with a generic PostScript PPD file, like from Foomatic. It seems that
+      the generic PPD file needs the additional line "*Protocols: TBCP",
+      but there is no confirmation for this yet, so please test. See
+      also &lt;a href="https://bugs.launchpad.net/bugs/802285"&gt;this
+      Ubuntu bug report&lt;/a&gt;.&lt;p&gt;
+
+      Throughput = 20&lt;p&gt;
       
-      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03&lt;p&gt;
       </en>
   </comments>
 </printer>
