@@ -1,3 +1,10 @@
+2011-08-31  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Lexmark-E120n.xml, driver/lj5gray.xml, driver/Postscript.xml:
+	  The Lexmark E120n does not work in PostScript mode when using
+	  generic PostScript PPD files. Updated comment and removed support
+	  by "Postscript" driver. Rated down to "Mostly" (Ubuntu bug 802285).
+
 2011-08-30  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* opt/GS-HalftoningAlgorithm-Gray.xml: Removed, this option does not
